Refactored utility classes, improved test coverage
Renamed helper methods, refactored various utility classes by preventing instantiation with private constructors, and enhanced test coverage through added tests. Amended DefaultExceptionHandler to remove unnecessary exception handlers and adjusted SonarQube configuration to exclude specific folders from coverage metrics. Also ensured defer-datasource-initialization in application configuration.
